[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/Player 1/Fixed/Jump (2).PNG" type="Texture" id=1]
[ext_resource path="res://sprites/Player 1/Fixed/Walk2 (2).PNG" type="Texture" id=2]
[ext_resource path="res://sprites/Player 1/Fixed/Bash (2).PNG" type="Texture" id=3]
[ext_resource path="res://sprites/Player 1/Fixed/Walk1 (2).PNG" type="Texture" id=4]
[ext_resource path="res://sprites/Player 1/Fixed/Fall (2).PNG" type="Texture" id=5]
[ext_resource path="res://source/Test/PlayerTest.gd" type="Script" id=6]
[ext_resource path="res://sprites/Player 1/Fixed/Walk3 (2).PNG" type="Texture" id=7]
[ext_resource path="res://sprites/Player 1/Fixed/Idle2 (2).PNG" type="Texture" id=8]
[ext_resource path="res://sprites/Player 1/Fixed/Push (2).PNG" type="Texture" id=9]
[ext_resource path="res://sprites/Player 1/Fixed/Idle1 (2).PNG" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "jump",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 9.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "bash",
"speed": 0.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": false,
"name": "push",
"speed": 0.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "fall",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 37.5, 44.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 39.5, 46 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( -3, -69 )
scale = Vector2( 0.498325, 0.456468 )
collision_mask = 8
script = ExtResource( 6 )
speed = 20
jump_power = 600

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 15.3351 )
scale = Vector2( 0.108503, 0.123116 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 7.75 )
shape = SubResource( 2 )

[node name="RightWallRaycast1" type="RayCast2D" parent="."]
position = Vector2( 28.0941, 50.3869 )
enabled = true
cast_to = Vector2( 17, 0 )
collision_mask = 8

[node name="RightWallRaycast2" type="RayCast2D" parent="."]
position = Vector2( 28.0941, -37.2425 )
enabled = true
cast_to = Vector2( 17, 0 )
collision_mask = 8

[node name="LeftWallRaycast1" type="RayCast2D" parent="."]
position = Vector2( -26.0874, 50.3869 )
enabled = true
cast_to = Vector2( -17, 0 )
collision_mask = 8

[node name="LeftWallRaycast2" type="RayCast2D" parent="."]
position = Vector2( -24.0807, -37.2425 )
enabled = true
cast_to = Vector2( -17, 0 )
collision_mask = 8

[node name="Enemy stomp" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy stomp"]
modulate = Color( 0, 0.180392, 1, 1 )
position = Vector2( 1.5, 6 )
shape = SubResource( 3 )

[connection signal="area_entered" from="Enemy stomp" to="." method="_on_Enemy_stomp_area_entered"]
[connection signal="body_entered" from="Enemy stomp" to="." method="_on_Enemy_stomp_body_entered"]
